fixing and finish sender and render mail functionality
